# myproject

./: .gitignore  README.md  pyproject.toml
src/bpmn_assistant/: .env.example  Dockerfile  app.py  login_router.py  readme.md
src/bpmn_assistant/api/: requests.py
src/bpmn_assistant/config/: aliyun_config.py  db_config.py  email_config.py  log_config.py
src/bpmn_assistant/core/: llm_facade.py  user_model.py
src/bpmn_assistant/core/provider_impl/: litellm_provider.py
src/bpmn_assistant/prompts/: bpmn_examples.jinja2  bpmn_representation.jinja2  create_bpmn.jinja2  determine_intent.jinja2  edit_bpmn.jinja2  generate_conversation_name.jinja2  make_final_comment.jinja2  respond_to_query.jinja2
src/bpmn_assistant/services/: __init__.py  bpmn_modeling_service.py  bpmn_xml_generator.py  conversation_service.py  conversational_service.py  determine_intent.py
src/bpmn_frontend/: README.md  package-lock.json  package.json  vite.config.js
src/bpmn_frontend/conf/: nginx.conf
src/bpmn_frontend/src/: App.vue  main.js
src/bpmn_frontend/src/components/: BpmnCanvas.vue  ChatInterface.vue  ConversationItem.vue  HistoryConversations.vue  MessageCard.vue  ModelPicker.vue
src/bpmn_frontend/src/enums/: MessageCard.vue
src/bpmn_frontend/src/login/: ForgotPassword.vue  Login.vue  Register.vue
src/bpmn_frontend/src/router/: index.js
src/bpmn_frontend/src/views/: HomeView.vue  UserInfo.vue  WelcomeView.vue
src/bpmn_layout_server/: readme.md
